--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,15 @@
 title: 话梅博客
 header-img: "img/green.jpg"
 tagline: "cn"  
-description: "Hmcc|Me"  
+description: "Personal Blog Site Maintained by huameicc"  
 baseurl: ""
-url: "http://blog.hmcc.me"  
+url: "http://hmcc.me"  
 
 # About/contact
 owner: 
-  name: "Hmcc"
-  email: hmccme@126.com
-  bio: "厚积薄发，不动如山"
+  name: "huameicc"
+  email: hmccwo@gmail.com
+  bio: "动如雷霆，不动如山"
 
 # Data
 gavatar: http://dreamofbook.qiniudn.com/Az..png
@@ -43,7 +43,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      author: "Hmcc"
+      author: "huameicc"
       header-img: "img/green.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
