--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 话梅博客
-header-img: "img/green.jpg"
+header-img: "img/black.jpg"
 tagline: "cn"  
 description: "Personal Blog Site Maintained by huameicc"  
 baseurl: ""
@@ -44,7 +44,7 @@ defaults:
     values:
       layout: "post"
       author: "huameicc"
-      header-img: "img/green.jpg" # We don't want posts without a header image, that whould mean white on white
+      header-img: "img/black.jpg" # We don't want posts without a header image, that whould mean white on white
 
 # Comments 
 comments :
